# FHE-BERT-Tiny

./: .gitignore  CMakeLists.txt  bert-tiny-emotion-classification.ipynb  bert-tiny-emotion-extract-weights.ipynb  bert-tiny-sst2-extract-weights.ipynb  bert-tiny-test.ipynb  emotion-compare_intermediate_weights.py  emotion-precompute.ipynb  emotion-save_intermediate_weights.py  extract_weights.ipynb  precomputed_vy_0_0.txt  sst2-compare_intermediate_weights.py  sst2-experiment.ipynb  sst2-precompute.ipynb  sst2-save_intermediate_weights.py  train-sst2.ipynb  vy-padding.ipynb
.ipynb_checkpoints/: bert-tiny-emotion-classification-checkpoint.ipynb  extract_weights-checkpoint.ipynb
emotion-precompute/: layer0_output_mean.txt  layer0_output_var.txt  layer0_output_vy.txt  layer0_selfoutput_var.txt  layer0_selfoutput_vy.txt  layer1_output_mean.txt  layer1_output_var.txt  layer1_output_vy.txt  layer1_selfoutput_mean.txt  layer1_selfoutput_var.txt  layer1_selfoutput_vy.txt
new-weights-emotion/: layer1_intermediate_weight_shape.txt
new-weights-sst2/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_self_output_inv_sqrt_var.txt  layer0_self_output_mean.txt  layer1_output_inv_sqrt_var.txt  layer1_output_mean.txt  layer1_self_output_inv_sqrt_var.txt  layer1_self_output_mean.txt
newsrc/: FHEController.cpp  Precision of FHE Circuit.ipynb  main.cpp
newsrc/python/: ExtractEmbeddings.py  PlainCircuit.py  Precision.py
newsrc/tmp_embeddings/: input_0.txt  input_1.txt  input_10.txt  input_11.txt  input_12.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
notebooks/: Precision of FHE Circuit.ipynb  SST-2 BERT-Tiny Chebyshev Intervals.ipynb
precomputed_layernorm/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_output_vy.txt  layer0_self_output_mean.txt  layer0_self_output_vy.txt  layer0_selfoutput_inv_sqrt_var.txt  layer0_selfoutput_mean.txt  layer0_selfoutput_vy.txt  layer1_output_inv_sqrt_var.txt  layer1_output_mean.txt  layer1_output_vy.txt  layer1_self_output_inv_sqrt_var.txt  layer1_self_output_vy.txt  layer1_selfoutput_inv_sqrt_var.txt  layer1_selfoutput_mean.txt  layer1_selfoutput_vy.txt
src/: FHEController.cpp
sst2-precompute/: layer0_output_mean.txt  layer0_output_var.txt  layer0_output_vy.txt  layer0_selfoutput_mean.txt  layer0_selfoutput_var.txt  layer0_selfoutput_vy.txt  layer1_output_mean.txt  layer1_output_var.txt  layer1_output_vy.txt  layer1_selfoutput_mean.txt  layer1_selfoutput_var.txt  layer1_selfoutput_vy.txt
train-sst2/: layer0_output_inv_sqrt_var.txt  layer0_output_vy.txt  layer0_selfoutput_inv_sqrt_var.txt  layer0_selfoutput_vy.txt  layer1_output_inv_sqrt_var.txt  layer1_output_vy.txt  layer1_selfoutput_inv_sqrt_var.txt  layer1_selfoutput_vy.txt
weights/: layer0_attself_key_weight.txt  layer0_attself_query_weight.txt  layer0_attself_value_weight.txt  layer0_intermediate_weight1.txt  layer0_output_weight1.txt  layer0_selfoutput_weight.txt  layer1_attself_key_weight.txt  layer1_attself_query_weight.txt  layer1_attself_value_weight.txt  layer1_intermediate_weight1.txt  layer1_output_weight1.txt  layer1_selfoutput_weight.txt  layer2_attself_key_weight.txt  layer2_attself_query_weight.txt  layer2_attself_value_weight.txt  layer2_intermediate_bias.txt  layer2_intermediate_weight1.txt  layer2_output_weight1.txt  layer2_selfoutput_weight.txt  layer3_attself_key_weight.txt  layer3_attself_query_weight.txt  layer3_attself_value_weight.txt  layer3_intermediate_weight1.txt  layer3_output_weight1.txt  layer3_selfoutput_weight.txt
weights-emotion/: classifier_bias.txt  classifier_weight.txt  layer0_attself_key_bias.txt  layer0_attself_key_weight.txt  layer0_attself_query_bias.txt  layer0_attself_query_weight.txt  layer0_attself_value_weight.txt  layer0_intermediate_bias.txt  layer0_intermediate_weight.txt  layer0_intermediate_weight1.txt  layer0_intermediate_weight2  layer0_intermediate_weight2.txt  layer0_intermediate_weight3  layer0_intermediate_weight3.txt  layer0_intermediate_weight4.txt  layer0_output_weight.txt  layer0_output_weight1.txt  layer0_output_weight2.txt  layer0_output_weight3.txt  layer0_output_weight4.txt  layer0_selfoutput_bias.txt  layer1_attself_key_bias.txt  layer1_attself_key_weight.txt  layer1_attself_query_weight.txt  layer1_attself_value_weight.txt  layer1_intermediate_bias.txt  layer1_intermediate_weight.txt  layer1_intermediate_weight1  layer1_intermediate_weight1.txt  layer1_intermediate_weight2  layer1_intermediate_weight2.txt  layer1_intermediate_weight3.txt  layer1_intermediate_weight4  layer1_intermediate_weight4.txt  layer1_output_weight.txt  layer1_output_weight1.txt  layer1_output_weight2.txt  layer1_output_weight3.txt  layer1_output_weight4.txt  layer1_selfoutput_bias.txt  (+15 more)
weightss/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_output_vy.txt  layer0_self_output_inv_sqrt_var.txt  layer0_self_output_mean.txt  layer0_selfoutput_mean.txt  layer0_selfoutput_vy.txt  layer1_output_inv_sqrt_var.txt  layer1_output_mean.txt  layer1_output_vy.txt  layer1_self_output_inv_sqrt_var.txt  layer1_self_output_mean.txt  layer1_selfoutput_inv_sqrt_var.txt  layer1_selfoutput_mean.txt  layer2_output_inv_sqrt_var.txt  layer2_output_mean.txt  layer2_self_output_inv_sqrt_var.txt  layer2_self_output_mean.txt  layer3_output_inv_sqrt_var.txt  layer3_output_mean.txt  layer3_self_output_inv_sqrt_var.txt  layer3_self_output_mean.txt
